services/servarr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:4.0.16
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /config
          name: sonarr-config
        - mountPath: /media-library
          name: sonarr-media-library-nfs
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName:  sonarr-config-claim
      - name: sonarr-media-library-nfs
        nfs:
          server: 192.168.50.50
          path: /volume1/NAS/MediaLibrary
          readOnly: false
