services/servarr/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://sonarr.local.hohepa.dev
    gethomepage.dev/group: Servarr
    gethomepage.dev/name: Sonarr
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/app: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.local.hohepa.dev`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: local-hohepa-dev-tls
